# inaturalist-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/inaturalist_mcp/: server.py
tests/: test_server.py
